--- a/detalhes.html
+++ b/detalhes.html
@@ -1,29 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projeto DSComerce</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-    <header>
-        <nav class="container">
-            <h1>DSCommerce</h1>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>DSCommerce</title>
 
-            <ul>
-                <li><a href="#"><img src="images/cart-fill-svgrepo-com 1.png" alt="carrinho"></a></li>
-                <li><a href="#">Entrar</a></li>
-            </ul>
-        </nav>
-    </header>
-     <main>
-      <section id="product-details" class="container">
-        <div class="card">
-          <div class="card-top">
-            <img src="images/image 3.png" alt="Computador" />
+    <link rel="stylesheet" href="css/details.css" />
+  </head>
+  <body>
+    <header class="dsc-header-client">
+      <nav class="dsc-container">
+        <h1>DSCommerce</h1>
+        <div class="dsc-navbar-right">
+          <div class="dsc-menu-items-container">
+            <div class="dsc-menu-item">
+              <img src="images/cart.svg" alt="Carrinho de compras" />
+            </div>
           </div>
-          <div class="card-bottom">
+          <a href="#">Entrar</a>
+        </div>
+      </nav>
+    </header>
+    <main>
+      <section id="product-details-section" class="dsc-container">
+        <div class="dsc-card dsc-mb20">
+          <div class="dsc-product-details-top dsc-line-bottom">
+            <img src="images/computer.png" alt="Computador" />
+          </div>
+          <div class="dsc-product-details-bottom">
             <h3>R$ 5000,00</h3>
             <h4>Computador Gamer XT</h4>
             <p>
@@ -35,25 +40,25 @@
               nulla pariatur. Excepteur sint occaecat cupidatat non proident,
               sunt in culpa qui officia deserunt mollit anim id est laborum.
             </p>
-            <div class="category-container">
-                <div class="category">
+            <div class="dsc-category-container">
+                <div class="dsc-category">
                     Eletrônicos
                 </div>
-                <div class="category">
+                <div class="dsc-category">
                     Computadores
                 </div>
             </div>
           </div>
         </div>
-        <div class="btn-container-220">
-            <div class="btn btn-blue mb20">
+        <div class="dsc-btn-page-container">
+            <div class="dsc-btn dsc-btn-blue">
                 Comprar
             </div>
-            <div class="btn btn-white">
+            <div class="dsc-btn dsc-btn-white">
                 Início
             </div>
         </div>
       </section>
     </main>
-</body>
+  </body>
 </html>
